--- a/examples/examples-browser/views/index.html
+++ b/examples/examples-browser/views/index.html
@@ -74,5 +74,5 @@
     </div>
   </body>
   <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
-  <script src="script.js"></script>
+  <script src="mergedscript.js"></script>
 </html>
