--- a/examples/examples-browser/views/index.html
+++ b/examples/examples-browser/views/index.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.css"
+      href="materialize.css"
     />
     <script
       type="text/javascript"
-      src="https://code.jquery.com/jquery-2.1.1.min.js"
+      src="jquery-2.1.1.min.js"
     ></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script src="https://unpkg.com/ml5@latest/dist/ml5.min.js"></script>
+    <script src="materialize.min.js"></script>
+    <script src="ml5.min.js"></script>
   </head>
   <body>
     <div class="center-content page-container">
@@ -73,6 +73,6 @@
 
     </div>
   </body>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.2/lib/p5.js"></script>
+  <script src="p5.js"></script>
   <script src="mergedscript.js"></script>
 </html>
